--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,13 @@ body {
     outline: none;
     padding-left: 20px;
     border: 1px solid red;
-    height: 40px;
+    height: 40px ;
     box-shadow: 0px 0px 4px red;
+}
+.form{
+    display: flex;
+    align-items: center;
+    
 }
 
 .sucPre {
